syntax = "proto3";
option go_package = "tq/pbuf";

package pbuf;

service tq {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Deregister (DeregisterRequest) returns (DeregisterResponse) {}
  rpc Status (StatusRequest) returns (StatusResponse) {}
}
  
message RegisterRequest {
  string label = 1;
}     

message RegisterResponse {
  bool registered = 1;
  string id = 2;
}   


message DeregisterRequest {
// empty now, may need something in future
}

message DeregisterResponse {
  bool registered = 1;
}   


enum WorkerState {
  WORKER_STATE_UNAVAILABLE = 0;
  WORKER_STATE_AVAILABLE = 1;
  WORKER_STATE_WORKING = 2;  
}

enum JobState {
    JOB_STATE_NONE = 0;
    JOB_STATE_RUNNING = 1;
    JOB_STATE_FINISHED = 2;
    JOB_STATE_ERROR = 3;
    JOB_STATE_FAILED = 4;
}

message JobStatus {
  JobState job_state = 1;
  optional float progress = 2;
  optional string msg = 3;
}

message StatusRequest {
  WorkerState worker_state = 1;    
  optional JobStatus job_status = 2;
}

enum JobControl {
  JOB_CONTROL_NONE = 0;
  JOB_CONTROL_CONTINUE = 1; 
  JOB_CONTROL_NEW = 2;
  JOB_CONTROL_CANCEL = 3;
}


message StatusResponse {
    JobControl job_control = 1; 
    // job parameters?
}

